--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 06-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1497,7 +1497,7 @@
 <td class='VargaStyle1'>ईळे᳚, अ॒ग्निं स्वव॑सं॒ नमो᳚भिरि॒ह प्र॑स॒त्तो वि च॑यत्‌ कृ॒तं नः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>रथै᳚रिव॒ प्र भ॑रे वाज॒यद्भिः॑ प्रदक्षि॒णिन्म॒रुतां॒ स्तोम॑मृध्याम् ||<span class='MantraNumbering'>{1/8}{4.3.25.1}{5.60.1}{5.5.4.1}{414, 4169}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आ ये त॒स्थुः पृष॑तीषु श्रु॒तासु॑ सु॒खेषु॑ रु॒द्रा म॒रुतो॒ रथे᳚षु |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>वना᳚ चिदुग्रा जिहते॒ नि वो᳚ भि॒या पृ॑थि॒वी चि॑द्रेजते॒ पर्व॑तश्चित् ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
+<td class='VargaStyle1'>आ ये त॒स्थुः पृष॑तीषु श्रु॒तासु॑ सु॒खेषु॑ रु॒द्रा म॒रुतो॒ रथे᳚षु |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>वना᳚ चिदुग्रा जिहते॒ नि वो᳚ भि॒या पृ॑थि॒वी चि॑द्‌ रेजते॒ पर्व॑तश्चित् ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>पर्व॑तश्चि॒न्महि॑ वृ॒द्धो बि॑भाय दि॒वश्चि॒त्‌ सानु॑ रेजत स्व॒ने वः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>यत्‌ क्रीळ॑थ मरुत ऋष्टि॒मन्त॒ आप॑ इव स॒ध्र्य᳚ञ्चो धवध्वे ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
@@ -1509,7 +1509,7 @@
 <td class='VargaStyle1'>अ॒ज्ये॒ष्ठासो॒, अक॑निष्ठास ए॒ते सं भ्रात॑रो वावृधुः॒ सौभ॑गाय |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>युवा᳚ पि॒ता स्वपा᳚ रु॒द्र ए᳚षां सु॒दुघा॒ पृश्निः॑ सु॒दिना᳚ म॒रुद्भ्यः॑ ||<span class='MantraNumbering'>{5/8}{4.3.25.5}{5.60.5}{5.5.4.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यदु॑त्त॒मे म॑रुतो मध्य॒मे वा॒ यद्‌ वा᳚व॒मे सु॑भगासो दि॒वि ष्ठ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>अतो᳚ नो रुद्रा, उ॒त वा॒ न्व१॑(अ॒)स्याऽग्ने᳚ वि॒त्ताद्ध॒विषो॒ यद्यजा᳚म ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>यदु॑त्त॒मे म॑रुतो मध्य॒मे वा॒ यद्‌ वा᳚व॒मे सु॑भगासो दि॒वि ष्ठ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>अतो᳚ नो रुद्रा, उ॒त वा॒ न्व१॑(अ॒)स्याऽग्ने᳚ वि॒त्ताद्ध॒विषो॒ यद्‌ यजा᳚म ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अ॒ग्निश्च॒ यन्म॑रुतो विश्ववेदसो दि॒वो वह॑ध्व॒ उत्त॑रा॒दधि॒ ष्णुभिः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>ते म᳚न्दसा॒ना धुन॑यो रिशादसो वा॒मं ध॑त्त॒ यज॑मानाय सुन्व॒ते ||<span class='MantraNumbering'>{7/8}{4.3.25.7}{5.60.7}{5.5.4.7}{414, 4175}</span></td>
@@ -1686,7 +1686,7 @@
 <td class='VargaStyle2'>ता हि क्ष॒त्रमवि॑ह्रुतं स॒म्यग॑सु॒र्य१॑(अ॒)माशा᳚ते |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p>अध᳚ व्र॒तेव॒ मानु॑षं॒ स्व१॑(अ॒)र्ण धा᳚यि दर्श॒तम् ||<span class='MantraNumbering'>{2/6}{4.4.4.2}{5.66.2}{5.5.10.2}{420, 4226}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ता वा॒मेषे॒ रथा᳚नामु॒र्वीं गव्यू᳚तिमेषाम् |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p>रा॒तह᳚व्यस्य सुष्टु॒तिं द॒धृक्स्तोमै᳚र्मनामहे ||<span class='MantraNumbering'>{3/6}{4.4.4.3}{5.66.3}{5.5.10.3}{420, 4227}</span></td>
+<td class='VargaStyle2'>ता वा॒मेषे॒ रथा᳚नामु॒र्वीं गव्यू᳚तिमेषाम् |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p>रा॒तह᳚व्यस्य सुष्टु॒तिं द॒धृक्‌ स्तोमै᳚र्मनामहे ||<span class='MantraNumbering'>{3/6}{4.4.4.3}{5.66.3}{5.5.10.3}{420, 4227}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>अधा॒ हि काव्या᳚ यु॒वं दक्ष॑स्य पू॒र्भिर॑द्भुता |<span class='RishiDevChandas'>{आत्रेयो रातहव्यः | मित्रावरुणौ | अनुष्टुप्}</span><p>नि के॒तुना॒ जना᳚नां चि॒केथे᳚ पूतदक्षसा ||<span class='MantraNumbering'>{4/6}{4.4.4.4}{5.66.4}{5.5.10.4}{420, 4228}</span></td>
