--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 06-Jan-2025]</h6>
+<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1499,7 +1499,7 @@
 <td class='VargaStyle1'>ईळे᳚,अ॒ग्निंस्वव॑सं॒नमो᳚भिरि॒हप्र॑स॒त्तोविच॑यत्‌कृ॒तंनः॑ |<p>रथै᳚रिव॒प्रभ॑रेवाज॒यद्भिः॑प्रदक्षि॒णिन्म॒रुतां॒स्तोम॑मृध्याम् || 1 || <span class='MantraNumbering'>वर्ग:25</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आयेत॒स्थुःपृष॑तीषुश्रु॒तासु॑सु॒खेषु॑रु॒द्राम॒रुतो॒रथे᳚षु |<p>वना᳚चिदुग्राजिहते॒निवो᳚भि॒यापृ॑थि॒वीचि॑द्रेजते॒पर्व॑तश्चित् || 2 || </td>
+<td class='VargaStyle1'>आयेत॒स्थुःपृष॑तीषुश्रु॒तासु॑सु॒खेषु॑रु॒द्राम॒रुतो॒रथे᳚षु |<p>वना᳚चिदुग्राजिहते॒निवो᳚भि॒यापृ॑थि॒वीचि॑द्‌रेजते॒पर्व॑तश्चित् || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>पर्व॑तश्चि॒न्महि॑वृ॒द्धोबि॑भायदि॒वश्चि॒त्‌सानु॑रेजतस्व॒नेवः॑ |<p>यत्‌क्रीळ॑थमरुतऋष्टि॒मन्त॒आप॑इवस॒ध्र्य᳚ञ्चोधवध्वे || 3 || </td>
@@ -1511,7 +1511,7 @@
 <td class='VargaStyle1'>अ॒ज्ये॒ष्ठासो॒,अक॑निष्ठासए॒तेसंभ्रात॑रोवावृधुः॒सौभ॑गाय |<p>युवा᳚पि॒तास्वपा᳚रु॒द्रए᳚षांसु॒दुघा॒पृश्निः॑सु॒दिना᳚म॒रुद्भ्यः॑ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>यदु॑त्त॒मेम॑रुतोमध्य॒मेवा॒यद्‌वा᳚व॒मेसु॑भगासोदि॒विष्ठ |<p>अतो᳚नोरुद्रा,उ॒तवा॒न्व१॑(अ॒)स्याऽग्ने᳚वि॒त्ताद्ध॒विषो॒यद्यजा᳚म || 6 || </td>
+<td class='VargaStyle1'>यदु॑त्त॒मेम॑रुतोमध्य॒मेवा॒यद्‌वा᳚व॒मेसु॑भगासोदि॒विष्ठ |<p>अतो᳚नोरुद्रा,उ॒तवा॒न्व१॑(अ॒)स्याऽग्ने᳚वि॒त्ताद्ध॒विषो॒यद्‌यजा᳚म || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अ॒ग्निश्च॒यन्म॑रुतोविश्ववेदसोदि॒वोवह॑ध्व॒उत्त॑रा॒दधि॒ष्णुभिः॑ |<p>तेम᳚न्दसा॒नाधुन॑योरिशादसोवा॒मंध॑त्त॒यज॑मानायसुन्व॒ते || 7 || </td>
@@ -1688,7 +1688,7 @@
 <td class='VargaStyle2'>ताहिक्ष॒त्रमवि॑ह्रुतंस॒म्यग॑सु॒र्य१॑(अ॒)माशा᳚ते | अध᳚व्र॒तेव॒मानु॑षं॒स्व१॑(अ॒)र्णधा᳚यिदर्श॒तम् || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तावा॒मेषे॒रथा᳚नामु॒र्वींगव्यू᳚तिमेषाम् | रा॒तह᳚व्यस्यसुष्टु॒तिंद॒धृक्स्तोमै᳚र्मनामहे || 3 || </td>
+<td class='VargaStyle2'>तावा॒मेषे॒रथा᳚नामु॒र्वींगव्यू᳚तिमेषाम् | रा॒तह᳚व्यस्यसुष्टु॒तिंद॒धृक्‌स्तोमै᳚र्मनामहे || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>अधा॒हिकाव्या᳚यु॒वंदक्ष॑स्यपू॒र्भिर॑द्भुता | निके॒तुना॒जना᳚नांचि॒केथे᳚पूतदक्षसा || 4 || </td>
