--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 06-Jan-2025]</h6>
+<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1499,7 +1499,7 @@
 <td class='VargaStyle1'>ಈಳೇ᳚,ಅ॒ಗ್ನಿಂಸ್ವವ॑ಸಂ॒ನಮೋ᳚ಭಿರಿ॒ಹಪ್ರ॑ಸ॒ತ್ತೋವಿಚ॑ಯತ್‌ಕೃ॒ತಂನಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರಥೈ᳚ರಿವ॒ಪ್ರಭ॑ರೇವಾಜ॒ಯದ್ಭಿಃ॑ಪ್ರದಕ್ಷಿ॒ಣಿನ್‌ಮ॒ರುತಾಂ॒ಸ್ತೋಮ॑ಮೃಧ್ಯಾ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:25</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆಯೇತ॒ಸ್ಥುಃಪೃಷ॑ತೀಷುಶ್ರು॒ತಾಸು॑ಸು॒ಖೇಷು॑ರು॒ದ್ರಾಮ॒ರುತೋ॒ರಥೇ᳚ಷು |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವನಾ᳚ಚಿದುಗ್ರಾಜಿಹತೇ॒ನಿವೋ᳚ಭಿ॒ಯಾಪೃ॑ಥಿ॒ವೀಚಿ॑ದ್ರೇಜತೇ॒ಪರ್‍ವ॑ತಶ್ಚಿ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle1'>ಆಯೇತ॒ಸ್ಥುಃಪೃಷ॑ತೀಷುಶ್ರು॒ತಾಸು॑ಸು॒ಖೇಷು॑ರು॒ದ್ರಾಮ॒ರುತೋ॒ರಥೇ᳚ಷು |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವನಾ᳚ಚಿದುಗ್ರಾಜಿಹತೇ॒ನಿವೋ᳚ಭಿ॒ಯಾಪೃ॑ಥಿ॒ವೀಚಿ॑ದ್‌ರೇಜತೇ॒ಪರ್‍ವ॑ತಶ್ಚಿ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪರ್‍ವ॑ತಶ್ಚಿ॒ನ್‌ಮಹಿ॑ವೃ॒ದ್ಧೋಬಿ॑ಭಾಯದಿ॒ವಶ್ಚಿ॒ತ್‌ಸಾನು॑ರೇಜತಸ್ವ॒ನೇವಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯತ್‌ಕ್ರೀಳ॑ಥಮರುತಋಷ್ಟಿ॒ಮಂತ॒ಆಪ॑ಇವಸ॒ಧ್ರ್ಯಂ᳚ಚೋಧವಧ್ವೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
@@ -1511,7 +1511,7 @@
 <td class='VargaStyle1'>ಅ॒ಜ್ಯೇ॒ಷ್ಠಾಸೋ॒,ಅಕ॑ನಿಷ್ಠಾಸಏ॒ತೇಸಂಭ್ರಾತ॑ರೋವಾವೃಧುಃ॒ಸೌಭ॑ಗಾಯ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯುವಾ᳚ಪಿ॒ತಾಸ್ವಪಾ᳚ರು॒ದ್ರಏ᳚ಷಾಂಸು॒ದುಘಾ॒ಪೃಶ್ನಿಃ॑ಸು॒ದಿನಾ᳚ಮ॒ರುದ್ಭ್ಯಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯದು॑ತ್ತ॒ಮೇಮ॑ರುತೋಮಧ್ಯ॒ಮೇವಾ॒ಯದ್‌ವಾ᳚ವ॒ಮೇಸು॑ಭಗಾಸೋದಿ॒ವಿಷ್ಠ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅತೋ᳚ನೋರುದ್ರಾ,ಉ॒ತವಾ॒ನ್ವ೧॑(ಅ॒)ಸ್ಯಾಽಗ್ನೇ᳚ವಿ॒ತ್ತಾದ್ಧ॒ವಿಷೋ॒ಯದ್ಯಜಾ᳚ಮ॒(ಸ್ವಾಹಾ᳚) || 6 || </td>
+<td class='VargaStyle1'>ಯದು॑ತ್ತ॒ಮೇಮ॑ರುತೋಮಧ್ಯ॒ಮೇವಾ॒ಯದ್‌ವಾ᳚ವ॒ಮೇಸು॑ಭಗಾಸೋದಿ॒ವಿಷ್ಠ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅತೋ᳚ನೋರುದ್ರಾ,ಉ॒ತವಾ॒ನ್ವ೧॑(ಅ॒)ಸ್ಯಾಽಗ್ನೇ᳚ವಿ॒ತ್ತಾದ್ಧ॒ವಿಷೋ॒ಯದ್‌ಯಜಾ᳚ಮ॒(ಸ್ವಾಹಾ᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅ॒ಗ್ನಿಶ್ಚ॒ಯನ್ಮ॑ರುತೋವಿಶ್ವವೇದಸೋದಿ॒ವೋವಹ॑ಧ್ವ॒ಉತ್ತ॑ರಾ॒ದಧಿ॒ಷ್ಣುಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ತೇಮಂ᳚ದಸಾ॒ನಾಧುನ॑ಯೋರಿಶಾದಸೋವಾ॒ಮಂಧ॑ತ್ತ॒ಯಜ॑ಮಾನಾಯಸುನ್ವ॒ತೇ(ಸ್ವಾಹಾ᳚) || 7 || </td>
@@ -1613,7 +1613,7 @@
 <td class='SuktaLabel'>[55] ಋತಸ್ಯಗೋಪಾವಿತಿ ಸಪ್ತರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯೋರ್ಚನಾನಾಮಿತ್ರಾವರುಣೌಜಗತೀ |<span class='MantraNumbering'>{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:4}{ಮಂಡಲ:5, ಸೂಕ್ತ:63}{ಅನುವಾಕ:5, ಸೂಕ್ತ:7}</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಋತ॑ಸ್ಯಗೋಪಾ॒ವಧಿ॑ತಿಷ್ಠಥೋ॒ರಥಂ॒ಸತ್ಯ॑ಧರ್ಮಾಣಾಪರ॒ಮೇವ್ಯೋ᳚ಮನಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋರ್ಚನಾನಾ | ಮಿತ್ರಾವರುಣೌ | ಜಗತೀ}</span><p>ಯಮತ್ರ॑ಮಿತ್ರಾವರು॒ಣಾವ॑ಥೋಯು॒ವಂತಸ್ಮೈ᳚ವೃ॒ಷ್ಟಿರ್ಮಧು॑ಮತ್‌ಪಿನ್ವತೇದಿ॒ವಃ(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:1</span></td>
+<td class='VargaStyle1'>ಋತ॑ಸ್ಯಗೋಪಾ॒ವಧಿ॑ತಿಷ್ಠಥೋ॒ರಥಂ॒ಸತ್ಯ॑ಧರ್ಮಾಣಾಪರ॒ಮೇವ್ಯೋ᳚ಮನಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋರ್ಚನಾನಾ | ಮಿತ್ರಾವರುಣೌ | ಜಗತೀ}</span><p>ಯಮತ್ರ॑ಮಿತ್ರಾವರು॒ಣಾವ॑ಥೋಯು॒ವಂತಸ್ಮೈ᳚ವೃ॒ಷ್ಟಿರ್‌ಮಧು॑ಮತ್‌ಪಿನ್ವತೇದಿ॒ವಃ(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:1</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಸ॒ಮ್ರಾಜಾ᳚ವ॒ಸ್ಯಭುವ॑ನಸ್ಯರಾಜಥೋ॒ಮಿತ್ರಾ᳚ವರುಣಾವಿ॒ದಥೇ᳚ಸ್ವ॒ರ್ದೃಶಾ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋರ್ಚನಾನಾ | ಮಿತ್ರಾವರುಣೌ | ಜಗತೀ}</span><p>ವೃ॒ಷ್ಟಿಂವಾಂ॒ರಾಧೋ᳚,ಅಮೃತ॒ತ್ವಮೀ᳚ಮಹೇ॒ದ್ಯಾವಾ᳚ಪೃಥಿ॒ವೀವಿಚ॑ರಂತಿತ॒ನ್ಯವಃ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
@@ -1688,7 +1688,7 @@
 <td class='VargaStyle2'>ತಾಹಿಕ್ಷ॒ತ್ರಮವಿ॑ಹ್ರುತಂಸ॒ಮ್ಯಗ॑ಸು॒ರ್‍ಯ೧॑(ಅ॒)ಮಾಶಾ᳚ತೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ಅಧ᳚ವ್ರ॒ತೇವ॒ಮಾನು॑ಷಂ॒ಸ್ವ೧॑(ಅ॒)ರ್ಣಧಾ᳚ಯಿದರ್ಶ॒ತಂ(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತಾವಾ॒ಮೇಷೇ॒ರಥಾ᳚ನಾಮು॒ರ್‍ವೀಂಗವ್ಯೂ᳚ತಿಮೇಷಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ರಾ॒ತಹ᳚ವ್ಯಸ್ಯಸುಷ್ಟು॒ತಿಂದ॒ಧೃಕ್ಸ್ತೋಮೈ᳚ರ್ಮನಾಮಹೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle2'>ತಾವಾ॒ಮೇಷೇ॒ರಥಾ᳚ನಾಮು॒ರ್‍ವೀಂಗವ್ಯೂ᳚ತಿಮೇಷಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ರಾ॒ತಹ᳚ವ್ಯಸ್ಯಸುಷ್ಟು॒ತಿಂದ॒ಧೃಕ್‌ಸ್ತೋಮೈ᳚ರ್ಮನಾಮಹೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅಧಾ॒ಹಿಕಾವ್ಯಾ᳚ಯು॒ವಂದಕ್ಷ॑ಸ್ಯಪೂ॒ರ್ಭಿರ॑ದ್ಭುತಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ನಿಕೇ॒ತುನಾ॒ಜನಾ᳚ನಾಂಚಿ॒ಕೇಥೇ᳚ಪೂತದಕ್ಷಸಾ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
