--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format1/RVS-Malayalam-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format1/RVS-Malayalam-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 06-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1497,7 +1497,7 @@
 <td class='VargaStyle1'>ഈളേ᳚, അ॒ഗ്നിം സ്വവ॑സം॒ നമോ᳚ഭിരി॒ഹ പ്ര॑സ॒ത്തോ വി ച॑യത്‌ കൃ॒തം നഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>രഥൈ᳚രിവ॒ പ്ര ഭ॑രേ വാജ॒യദ്ഭിഃ॑ പ്രദക്ഷി॒ണിന്മ॒രുതാം॒ സ്തോമ॑മൃധ്യാം ||<span class='MantraNumbering'>{1/8}{4.3.25.1}{5.60.1}{5.5.4.1}{414, 4169}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആ യേ ത॒സ്ഥുഃ പൃഷ॑തീഷു ശ്രു॒താസു॑ സു॒ഖേഷു॑ രു॒ദ്രാ മ॒രുതോ॒ രഥേ᳚ഷു |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>വനാ᳚ ചിദുഗ്രാ ജിഹതേ॒ നി വോ᳚ ഭി॒യാ പൃ॑ഥി॒വീ ചി॑ദ്രേജതേ॒ പർവ॑തശ്ചിത് ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
+<td class='VargaStyle1'>ആ യേ ത॒സ്ഥുഃ പൃഷ॑തീഷു ശ്രു॒താസു॑ സു॒ഖേഷു॑ രു॒ദ്രാ മ॒രുതോ॒ രഥേ᳚ഷു |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>വനാ᳚ ചിദുഗ്രാ ജിഹതേ॒ നി വോ᳚ ഭി॒യാ പൃ॑ഥി॒വീ ചി॑ദ്‌ രേജതേ॒ പർവ॑തശ്ചിത് ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>പർവ॑തശ്ചി॒ന്മഹി॑ വൃ॒ദ്ധോ ബി॑ഭായ ദി॒വശ്ചി॒ത്‌ സാനു॑ രേജത സ്വ॒നേ വഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>യത്‌ ക്രീള॑ഥ മരുത ഋഷ്ടി॒മന്ത॒ ആപ॑ ഇവ സ॒ധ്ര്യ᳚ഞ്ചോ ധവധ്വേ ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
@@ -1509,7 +1509,7 @@
 <td class='VargaStyle1'>അ॒ജ്യേ॒ഷ്ഠാസോ॒, അക॑നിഷ്ഠാസ ഏ॒തേ സം ഭ്രാത॑രോ വാവൃധുഃ॒ സൗഭ॑ഗായ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>യുവാ᳚ പി॒താ സ്വപാ᳚ രു॒ദ്ര ഏ᳚ഷാം സു॒ദുഘാ॒ പൃശ്നിഃ॑ സു॒ദിനാ᳚ മ॒രുദ്ഭ്യഃ॑ ||<span class='MantraNumbering'>{5/8}{4.3.25.5}{5.60.5}{5.5.4.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യദു॑ത്ത॒മേ മ॑രുതോ മധ്യ॒മേ വാ॒ യദ്‌ വാ᳚വ॒മേ സു॑ഭഗാസോ ദി॒വി ഷ്ഠ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>അതോ᳚ നോ രുദ്രാ, ഉ॒ത വാ॒ ന്വ1॑(അ॒)സ്യാഽഗ്നേ᳚ വി॒ത്താദ്ധ॒വിഷോ॒ യദ്യജാ᳚മ ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>യദു॑ത്ത॒മേ മ॑രുതോ മധ്യ॒മേ വാ॒ യദ്‌ വാ᳚വ॒മേ സു॑ഭഗാസോ ദി॒വി ഷ്ഠ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>അതോ᳚ നോ രുദ്രാ, ഉ॒ത വാ॒ ന്വ1॑(അ॒)സ്യാഽഗ്നേ᳚ വി॒ത്താദ്ധ॒വിഷോ॒ യദ്‌ യജാ᳚മ ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>അ॒ഗ്നിശ്ച॒ യന്മ॑രുതോ വിശ്വവേദസോ ദി॒വോ വഹ॑ധ്വ॒ ഉത്ത॑രാ॒ദധി॒ ഷ്ണുഭിഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>തേ മ᳚ന്ദസാ॒നാ ധുന॑യോ രിശാദസോ വാ॒മം ധ॑ത്ത॒ യജ॑മാനായ സുന്വ॒തേ ||<span class='MantraNumbering'>{7/8}{4.3.25.7}{5.60.7}{5.5.4.7}{414, 4175}</span></td>
@@ -1686,7 +1686,7 @@
 <td class='VargaStyle2'>താ ഹി ക്ഷ॒ത്രമവി॑ഹ്രുതം സ॒മ്യഗ॑സു॒ര്യ1॑(അ॒)മാശാ᳚തേ |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>അധ᳚ വ്ര॒തേവ॒ മാനു॑ഷം॒ സ്വ1॑(അ॒)ര്ണ ധാ᳚യി ദർശ॒തം ||<span class='MantraNumbering'>{2/6}{4.4.4.2}{5.66.2}{5.5.10.2}{420, 4226}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>താ വാ॒മേഷേ॒ രഥാ᳚നാമു॒ർവീം ഗവ്യൂ᳚തിമേഷാം |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>രാ॒തഹ᳚വ്യസ്യ സുഷ്ടു॒തിം ദ॒ധൃക്സ്തോമൈ᳚ർമനാമഹേ ||<span class='MantraNumbering'>{3/6}{4.4.4.3}{5.66.3}{5.5.10.3}{420, 4227}</span></td>
+<td class='VargaStyle2'>താ വാ॒മേഷേ॒ രഥാ᳚നാമു॒ർവീം ഗവ്യൂ᳚തിമേഷാം |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>രാ॒തഹ᳚വ്യസ്യ സുഷ്ടു॒തിം ദ॒ധൃക്‌ സ്തോമൈ᳚ർമനാമഹേ ||<span class='MantraNumbering'>{3/6}{4.4.4.3}{5.66.3}{5.5.10.3}{420, 4227}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>അധാ॒ ഹി കാവ്യാ᳚ യു॒വം ദക്ഷ॑സ്യ പൂ॒ർഭിര॑ദ്ഭുതാ |<span class='RishiDevChandas'>{ആത്രേയോ രാതഹവ്യഃ | മിത്രാവരുണൗ | അനുഷ്ടുപ്}</span><p>നി കേ॒തുനാ॒ ജനാ᳚നാം ചി॒കേഥേ᳚ പൂതദക്ഷസാ ||<span class='MantraNumbering'>{4/6}{4.4.4.4}{5.66.4}{5.5.10.4}{420, 4228}</span></td>
