--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format3/RVS-Tamil-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format3/RVS-Tamil-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 06-Jan-2025]</h6>
+<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1499,7 +1499,7 @@
 <td class='VargaStyle1'>ஈளே᳚,அ॒க்³னிம்ʼஸ்வவ॑ஸம்॒ʼநமோ᳚பி⁴ரி॒ஹப்ர॑ஸ॒த்தோவிச॑யத்‌க்ரு॒ʼதம்ʼந॑꞉ |<p>ரதை²᳚ரிவ॒ப்ரப⁴॑ரேவாஜ॒யத்³பி⁴॑꞉ப்ரத³க்ஷி॒ணின்ம॒ருதாம்॒ʼஸ்தோம॑ம்ருʼத்⁴யாம் || 1 || <span class='MantraNumbering'>வர்க³:25</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆயேத॒ஸ்து²꞉ப்ருʼஷ॑தீஷுஶ்ரு॒தாஸு॑ஸு॒கே²ஷு॑ரு॒த்³ராம॒ருதோ॒ரதே²᳚ஷு |<p>வனா᳚சிது³க்³ராஜிஹதே॒நிவோ᳚பி⁴॒யாப்ரு॑ʼதி²॒வீசி॑த்³ரேஜதே॒பர்வ॑தஶ்சித் || 2 || </td>
+<td class='VargaStyle1'>ஆயேத॒ஸ்து²꞉ப்ருʼஷ॑தீஷுஶ்ரு॒தாஸு॑ஸு॒கே²ஷு॑ரு॒த்³ராம॒ருதோ॒ரதே²᳚ஷு |<p>வனா᳚சிது³க்³ராஜிஹதே॒நிவோ᳚பி⁴॒யாப்ரு॑ʼதி²॒வீசி॑த்³‌ரேஜதே॒பர்வ॑தஶ்சித் || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>பர்வ॑தஶ்சி॒ன்மஹி॑வ்ரு॒ʼத்³தோ⁴பி³॑பா⁴யதி³॒வஶ்சி॒த்‌ஸானு॑ரேஜதஸ்வ॒னேவ॑꞉ |<p>யத்‌க்ரீள॑த²மருதருʼஷ்டி॒மந்த॒ஆப॑இவஸ॒த்⁴ர்ய᳚ஞ்சோத⁴வத்⁴வே || 3 || </td>
@@ -1511,7 +1511,7 @@
 <td class='VargaStyle1'>அ॒ஜ்யே॒ஷ்டா²ஸோ॒,அக॑நிஷ்டா²ஸஏ॒தேஸம்ʼப்⁴ராத॑ரோவாவ்ருʼது⁴॒꞉ஸௌப⁴॑கா³ய |<p>யுவா᳚பி॒தாஸ்வபா᳚ரு॒த்³ரஏ᳚ஷாம்ʼஸு॒து³கா⁴॒ப்ருʼஶ்னி॑꞉ஸு॒தி³னா᳚ம॒ருத்³ப்⁴ய॑꞉ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யது³॑த்த॒மேம॑ருதோமத்⁴ய॒மேவா॒யத்³‌வா᳚வ॒மேஸு॑ப⁴கா³ஸோதி³॒விஷ்ட² |<p>அதோ᳚நோருத்³ரா,உ॒தவா॒ந்வ1॑(அ॒)ஸ்யா(அ)க்³னே᳚வி॒த்தாத்³த⁴॒விஷோ॒யத்³யஜா᳚ம || 6 || </td>
+<td class='VargaStyle1'>யது³॑த்த॒மேம॑ருதோமத்⁴ய॒மேவா॒யத்³‌வா᳚வ॒மேஸு॑ப⁴கா³ஸோதி³॒விஷ்ட² |<p>அதோ᳚நோருத்³ரா,உ॒தவா॒ந்வ1॑(அ॒)ஸ்யா(அ)க்³னே᳚வி॒த்தாத்³த⁴॒விஷோ॒யத்³‌யஜா᳚ம || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>அ॒க்³நிஶ்ச॒யன்ம॑ருதோவிஶ்வவேத³ஸோதி³॒வோவஹ॑த்⁴வ॒உத்த॑ரா॒த³தி⁴॒ஷ்ணுபி⁴॑꞉ |<p>தேம᳚ந்த³ஸா॒னாது⁴ன॑யோரிஶாத³ஸோவா॒மம்ʼத⁴॑த்த॒யஜ॑மானாயஸுன்வ॒தே || 7 || </td>
@@ -1688,7 +1688,7 @@
 <td class='VargaStyle2'>தாஹிக்ஷ॒த்ரமவி॑ஹ்ருதம்ʼஸ॒ம்யக³॑ஸு॒ர்ய1॑(அ॒)மாஶா᳚தே | அத⁴᳚வ்ர॒தேவ॒மானு॑ஷம்॒ʼஸ்வ1॑(அ॒)ர்ணதா⁴᳚யித³ர்ஶ॒தம் || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தாவா॒மேஷே॒ரதா²᳚நாமு॒ர்வீம்ʼக³வ்யூ᳚திமேஷாம் | ரா॒தஹ᳚வ்யஸ்யஸுஷ்டு॒திம்ʼத³॒த்⁴ருʼக்ஸ்தோமை᳚ர்மநாமஹே || 3 || </td>
+<td class='VargaStyle2'>தாவா॒மேஷே॒ரதா²᳚நாமு॒ர்வீம்ʼக³வ்யூ᳚திமேஷாம் | ரா॒தஹ᳚வ்யஸ்யஸுஷ்டு॒திம்ʼத³॒த்⁴ருʼக்‌ஸ்தோமை᳚ர்மநாமஹே || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>அதா⁴॒ஹிகாவ்யா᳚யு॒வம்ʼத³க்ஷ॑ஸ்யபூ॒ர்பி⁴ர॑த்³பு⁴தா | நிகே॒துனா॒ஜனா᳚நாம்ʼசி॒கேதே²᳚பூதத³க்ஷஸா || 4 || </td>
