--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format4/RVS-Telugu-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format4/RVS-Telugu-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 06-Jan-2025]</h6>
+<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1499,7 +1499,7 @@
 <td class='VargaStyle1'>ఈళే᳚,అ॒గ్నింస్వవ॑సం॒నమో᳚భిరి॒హప్ర॑స॒త్తోవిచ॑యత్‌కృ॒తంనః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>రథై᳚రివ॒ప్రభ॑రేవాజ॒యద్భిః॑ప్రదక్షి॒ణిన్మ॒రుతాం॒స్తోమ॑మృధ్యా॒‌మ్(స్వాహా᳚) || 1 || <span class='MantraNumbering'>వర్గ:25</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆయేత॒స్థుఃపృష॑తీషుశ్రు॒తాసు॑సు॒ఖేషు॑రు॒ద్రామ॒రుతో॒రథే᳚షు |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>వనా᳚చిదుగ్రాజిహతే॒నివో᳚భి॒యాపృ॑థి॒వీచి॑ద్రేజతే॒పర్వ॑తశ్చి॒‌త్(స్వాహా᳚) || 2 || </td>
+<td class='VargaStyle1'>ఆయేత॒స్థుఃపృష॑తీషుశ్రు॒తాసు॑సు॒ఖేషు॑రు॒ద్రామ॒రుతో॒రథే᳚షు |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>వనా᳚చిదుగ్రాజిహతే॒నివో᳚భి॒యాపృ॑థి॒వీచి॑ద్‌రేజతే॒పర్వ॑తశ్చి॒‌త్(స్వాహా᳚) || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>పర్వ॑తశ్చి॒న్మహి॑వృ॒ద్ధోబి॑భాయది॒వశ్చి॒త్‌సాను॑రేజతస్వ॒నేవః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>యత్‌క్రీళ॑థమరుతఋష్టి॒మంత॒ఆప॑ఇవస॒ధ్ర్యం᳚చోధవధ్వే॒(స్వాహా᳚) || 3 || </td>
@@ -1511,7 +1511,7 @@
 <td class='VargaStyle1'>అ॒జ్యే॒ష్ఠాసో॒,అక॑నిష్ఠాసఏ॒తేసంభ్రాత॑రోవావృధుః॒సౌభ॑గాయ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>యువా᳚పి॒తాస్వపా᳚రు॒ద్రఏ᳚షాంసు॒దుఘా॒పృశ్నిః॑సు॒దినా᳚మ॒రుద్భ్యః॒(స్వాహా᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యదు॑త్త॒మేమ॑రుతోమధ్య॒మేవా॒యద్‌వా᳚వ॒మేసు॑భగాసోది॒విష్ఠ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>అతో᳚నోరుద్రా,ఉ॒తవా॒న్వ1॑(అ॒)స్యాఽగ్నే᳚వి॒త్తాద్ధ॒విషో॒యద్యజా᳚మ॒(స్వాహా᳚) || 6 || </td>
+<td class='VargaStyle1'>యదు॑త్త॒మేమ॑రుతోమధ్య॒మేవా॒యద్‌వా᳚వ॒మేసు॑భగాసోది॒విష్ఠ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>అతో᳚నోరుద్రా,ఉ॒తవా॒న్వ1॑(అ॒)స్యాఽగ్నే᳚వి॒త్తాద్ధ॒విషో॒యద్‌యజా᳚మ॒(స్వాహా᳚) || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>అ॒గ్నిశ్చ॒యన్మ॑రుతోవిశ్వవేదసోది॒వోవహ॑ధ్వ॒ఉత్త॑రా॒దధి॒ష్ణుభిః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>తేమం᳚దసా॒నాధున॑యోరిశాదసోవా॒మంధ॑త్త॒యజ॑మానాయసున్వ॒తే(స్వాహా᳚) || 7 || </td>
@@ -1688,7 +1688,7 @@
 <td class='VargaStyle2'>తాహిక్ష॒త్రమవి॑హ్రుతంస॒మ్యగ॑సు॒ర్య1॑(అ॒)మాశా᳚తే |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>అధ᳚వ్ర॒తేవ॒మాను॑షం॒స్వ1॑(అ॒)ర్ణధా᳚యిదర్శ॒తం(స్వాహా᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తావా॒మేషే॒రథా᳚నాము॒ర్వీంగవ్యూ᳚తిమేషాం |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>రా॒తహ᳚వ్యస్యసుష్టు॒తింద॒ధృక్స్తోమై᳚ర్మనామహే॒(స్వాహా᳚) || 3 || </td>
+<td class='VargaStyle2'>తావా॒మేషే॒రథా᳚నాము॒ర్వీంగవ్యూ᳚తిమేషాం |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>రా॒తహ᳚వ్యస్యసుష్టు॒తింద॒ధృక్‌స్తోమై᳚ర్మనామహే॒(స్వాహా᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>అధా॒హికావ్యా᳚యు॒వందక్ష॑స్యపూ॒ర్భిర॑ద్భుతా |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>నికే॒తునా॒జనా᳚నాంచి॒కేథే᳚పూతదక్షసా॒(స్వాహా᳚) || 4 || </td>
