--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 06-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1776,7 +1776,7 @@
 <td class='VargaStyle1'>ಈಳೇ᳚, ಅ॒ಗ್ನಿಂ ಸ್ವವ॑ಸಂ॒ ನಮೋ᳚ಭಿರಿ॒ಹ ಪ್ರ॑ಸ॒ತ್ತೋ ವಿ ಚ॑ಯತ್‌ ಕೃ॒ತಂ ನಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ರಥೈ᳚ರಿವ॒ ಪ್ರ ಭ॑ರೇ ವಾಜ॒ಯದ್ಭಿಃ॑ ಪ್ರದಕ್ಷಿ॒ಣಿನ್‌ಮ॒ರುತಾಂ॒ ಸ್ತೋಮ॑ಮೃಧ್ಯಾಂ ||<span class='MantraNumbering'>{1/8}{5.60.1}{5.5.4.1}{4.3.25.1}{414, 4169}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆ ಯೇ ತ॒ಸ್ಥುಃ ಪೃಷ॑ತೀಷು ಶ್ರು॒ತಾಸು॑ ಸು॒ಖೇಷು॑ ರು॒ದ್ರಾ ಮ॒ರುತೋ॒ ರಥೇ᳚ಷು |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವನಾ᳚ ಚಿದುಗ್ರಾ ಜಿಹತೇ॒ ನಿ ವೋ᳚ ಭಿ॒ಯಾ ಪೃ॑ಥಿ॒ವೀ ಚಿ॑ದ್ರೇಜತೇ॒ ಪರ್‍ವ॑ತಶ್ಚಿತ್ ||<span class='MantraNumbering'>{2/8}{5.60.2}{5.5.4.2}{4.3.25.2}{414, 4170}</span></td>
+<td class='VargaStyle1'>ಆ ಯೇ ತ॒ಸ್ಥುಃ ಪೃಷ॑ತೀಷು ಶ್ರು॒ತಾಸು॑ ಸು॒ಖೇಷು॑ ರು॒ದ್ರಾ ಮ॒ರುತೋ॒ ರಥೇ᳚ಷು |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ವನಾ᳚ ಚಿದುಗ್ರಾ ಜಿಹತೇ॒ ನಿ ವೋ᳚ ಭಿ॒ಯಾ ಪೃ॑ಥಿ॒ವೀ ಚಿ॑ದ್‌ ರೇಜತೇ॒ ಪರ್‍ವ॑ತಶ್ಚಿತ್ ||<span class='MantraNumbering'>{2/8}{5.60.2}{5.5.4.2}{4.3.25.2}{414, 4170}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪರ್‍ವ॑ತಶ್ಚಿ॒ನ್‌ಮಹಿ॑ ವೃ॒ದ್ಧೋ ಬಿ॑ಭಾಯ ದಿ॒ವಶ್ಚಿ॒ತ್‌ ಸಾನು॑ ರೇಜತ ಸ್ವ॒ನೇ ವಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯತ್‌ ಕ್ರೀಳ॑ಥ ಮರುತ ಋಷ್ಟಿ॒ಮಂತ॒ ಆಪ॑ ಇವ ಸ॒ಧ್ರ್ಯಂ᳚ಚೋ ಧವಧ್ವೇ ||<span class='MantraNumbering'>{3/8}{5.60.3}{5.5.4.3}{4.3.25.3}{414, 4171}</span></td>
@@ -1788,7 +1788,7 @@
 <td class='VargaStyle1'>ಅ॒ಜ್ಯೇ॒ಷ್ಠಾಸೋ॒, ಅಕ॑ನಿಷ್ಠಾಸ ಏ॒ತೇ ಸಂ ಭ್ರಾತ॑ರೋ ವಾವೃಧುಃ॒ ಸೌಭ॑ಗಾಯ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯುವಾ᳚ ಪಿ॒ತಾ ಸ್ವಪಾ᳚ ರು॒ದ್ರ ಏ᳚ಷಾಂ ಸು॒ದುಘಾ॒ ಪೃಶ್ನಿಃ॑ ಸು॒ದಿನಾ᳚ ಮ॒ರುದ್ಭ್ಯಃ॑ ||<span class='MantraNumbering'>{5/8}{5.60.5}{5.5.4.5}{4.3.25.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಯದು॑ತ್ತ॒ಮೇ ಮ॑ರುತೋ ಮಧ್ಯ॒ಮೇ ವಾ॒ ಯದ್‌ ವಾ᳚ವ॒ಮೇ ಸು॑ಭಗಾಸೋ ದಿ॒ವಿ ಷ್ಠ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅತೋ᳚ ನೋ ರುದ್ರಾ, ಉ॒ತ ವಾ॒ ನ್ವ೧॑(ಅ॒)ಸ್ಯಾಽಗ್ನೇ᳚ ವಿ॒ತ್ತಾದ್ಧ॒ವಿಷೋ॒ ಯದ್ಯಜಾ᳚ಮ ||<span class='MantraNumbering'>{6/8}{5.60.6}{5.5.4.6}{4.3.25.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>ಯದು॑ತ್ತ॒ಮೇ ಮ॑ರುತೋ ಮಧ್ಯ॒ಮೇ ವಾ॒ ಯದ್‌ ವಾ᳚ವ॒ಮೇ ಸು॑ಭಗಾಸೋ ದಿ॒ವಿ ಷ್ಠ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಅತೋ᳚ ನೋ ರುದ್ರಾ, ಉ॒ತ ವಾ॒ ನ್ವ೧॑(ಅ॒)ಸ್ಯಾಽಗ್ನೇ᳚ ವಿ॒ತ್ತಾದ್ಧ॒ವಿಷೋ॒ ಯದ್‌ ಯಜಾ᳚ಮ ||<span class='MantraNumbering'>{6/8}{5.60.6}{5.5.4.6}{4.3.25.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅ॒ಗ್ನಿಶ್ಚ॒ ಯನ್ಮ॑ರುತೋ ವಿಶ್ವವೇದಸೋ ದಿ॒ವೋ ವಹ॑ಧ್ವ॒ ಉತ್ತ॑ರಾ॒ದಧಿ॒ ಷ್ಣುಭಿಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ತೇ ಮಂ᳚ದಸಾ॒ನಾ ಧುನ॑ಯೋ ರಿಶಾದಸೋ ವಾ॒ಮಂ ಧ॑ತ್ತ॒ ಯಜ॑ಮಾನಾಯ ಸುನ್ವ॒ತೇ ||<span class='MantraNumbering'>{7/8}{5.60.7}{5.5.4.7}{4.3.25.7}{414, 4175}</span></td>
@@ -1890,7 +1890,7 @@
 <td class='SuktaLabel'>[63] ಋತಸ್ಯಗೋಪಾವಿತಿ ಸಪ್ತರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯೋರ್ಚನಾನಾಮಿತ್ರಾವರುಣೌಜಗತೀ |</td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಋತ॑ಸ್ಯ ಗೋಪಾ॒ವಧಿ॑ ತಿಷ್ಠಥೋ॒ ರಥಂ॒ ಸತ್ಯ॑ಧರ್ಮಾಣಾ ಪರ॒ಮೇ ವ್ಯೋ᳚ಮನಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋರ್ಚನಾನಾ | ಮಿತ್ರಾವರುಣೌ | ಜಗತೀ}</span><p>ಯಮತ್ರ॑ ಮಿತ್ರಾವರು॒ಣಾವ॑ಥೋ ಯು॒ವಂ ತಸ್ಮೈ᳚ ವೃ॒ಷ್ಟಿರ್ಮಧು॑ಮತ್‌ ಪಿನ್ವತೇ ದಿ॒ವಃ ||<span class='MantraNumbering'>{1/7}{5.63.1}{5.5.7.1}{4.4.1.1}{417, 4205}</span></td>
+<td class='VargaStyle1'>ಋತ॑ಸ್ಯ ಗೋಪಾ॒ವಧಿ॑ ತಿಷ್ಠಥೋ॒ ರಥಂ॒ ಸತ್ಯ॑ಧರ್ಮಾಣಾ ಪರ॒ಮೇ ವ್ಯೋ᳚ಮನಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋರ್ಚನಾನಾ | ಮಿತ್ರಾವರುಣೌ | ಜಗತೀ}</span><p>ಯಮತ್ರ॑ ಮಿತ್ರಾವರು॒ಣಾವ॑ಥೋ ಯು॒ವಂ ತಸ್ಮೈ᳚ ವೃ॒ಷ್ಟಿರ್‌ಮಧು॑ಮತ್‌ ಪಿನ್ವತೇ ದಿ॒ವಃ ||<span class='MantraNumbering'>{1/7}{5.63.1}{5.5.7.1}{4.4.1.1}{417, 4205}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಸ॒ಮ್ರಾಜಾ᳚ವ॒ಸ್ಯ ಭುವ॑ನಸ್ಯ ರಾಜಥೋ॒ ಮಿತ್ರಾ᳚ವರುಣಾ ವಿ॒ದಥೇ᳚ ಸ್ವ॒ರ್ದೃಶಾ᳚ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋರ್ಚನಾನಾ | ಮಿತ್ರಾವರುಣೌ | ಜಗತೀ}</span><p>ವೃ॒ಷ್ಟಿಂ ವಾಂ॒ ರಾಧೋ᳚, ಅಮೃತ॒ತ್ವಮೀ᳚ಮಹೇ॒ ದ್ಯಾವಾ᳚ಪೃಥಿ॒ವೀ ವಿ ಚ॑ರಂತಿ ತ॒ನ್ಯವಃ॑ ||<span class='MantraNumbering'>{2/7}{5.63.2}{5.5.7.2}{4.4.1.2}{417, 4206}</span></td>
@@ -1965,7 +1965,7 @@
 <td class='VargaStyle2'>ತಾ ಹಿ ಕ್ಷ॒ತ್ರಮವಿ॑ಹ್ರುತಂ ಸ॒ಮ್ಯಗ॑ಸು॒ರ್‍ಯ೧॑(ಅ॒)ಮಾಶಾ᳚ತೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ಅಧ᳚ ವ್ರ॒ತೇವ॒ ಮಾನು॑ಷಂ॒ ಸ್ವ೧॑(ಅ॒)ರ್ಣ ಧಾ᳚ಯಿ ದರ್ಶ॒ತಂ ||<span class='MantraNumbering'>{2/6}{5.66.2}{5.5.10.2}{4.4.4.2}{420, 4226}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತಾ ವಾ॒ಮೇಷೇ॒ ರಥಾ᳚ನಾಮು॒ರ್‍ವೀಂ ಗವ್ಯೂ᳚ತಿಮೇಷಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ರಾ॒ತಹ᳚ವ್ಯಸ್ಯ ಸುಷ್ಟು॒ತಿಂ ದ॒ಧೃಕ್ಸ್ತೋಮೈ᳚ರ್ಮನಾಮಹೇ ||<span class='MantraNumbering'>{3/6}{5.66.3}{5.5.10.3}{4.4.4.3}{420, 4227}</span></td>
+<td class='VargaStyle2'>ತಾ ವಾ॒ಮೇಷೇ॒ ರಥಾ᳚ನಾಮು॒ರ್‍ವೀಂ ಗವ್ಯೂ᳚ತಿಮೇಷಾಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ರಾ॒ತಹ᳚ವ್ಯಸ್ಯ ಸುಷ್ಟು॒ತಿಂ ದ॒ಧೃಕ್‌ ಸ್ತೋಮೈ᳚ರ್ಮನಾಮಹೇ ||<span class='MantraNumbering'>{3/6}{5.66.3}{5.5.10.3}{4.4.4.3}{420, 4227}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಅಧಾ॒ ಹಿ ಕಾವ್ಯಾ᳚ ಯು॒ವಂ ದಕ್ಷ॑ಸ್ಯ ಪೂ॒ರ್ಭಿರ॑ದ್ಭುತಾ |<span class='RishiDevChandas'>{ಆತ್ರೇಯೋ ರಾತಹವ್ಯಃ | ಮಿತ್ರಾವರುಣೌ | ಅನುಷ್ಟುಪ್}</span><p>ನಿ ಕೇ॒ತುನಾ॒ ಜನಾ᳚ನಾಂ ಚಿ॒ಕೇಥೇ᳚ ಪೂತದಕ್ಷಸಾ ||<span class='MantraNumbering'>{4/6}{5.66.4}{5.5.10.4}{4.4.4.4}{420, 4228}</span></td>
