--- a/Rigveda/SamhitaPatha/Malayalam/Mandala/Format3/RVS-Malayalam-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Mandala/Format3/RVS-Malayalam-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (മണ്ഡല: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 06-Jan-2025]</h6>
+<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1838,7 +1838,7 @@
 <td class='VargaStyle1'>ഈളേ᳚,അ॒ഗ്നിംസ്വവ॑സം॒നമോ᳚ഭിരി॒ഹപ്ര॑സ॒ത്തോവിച॑യത്‌കൃ॒തംനഃ॑ |<p>രഥൈ᳚രിവ॒പ്രഭ॑രേവാജ॒യദ്ഭിഃ॑പ്രദക്ഷി॒ണിന്മ॒രുതാം॒സ്തോമ॑മൃധ്യാം || 1 || <span class='MantraNumbering'>വർഗ:25</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആയേത॒സ്ഥുഃപൃഷ॑തീഷുശ്രു॒താസു॑സു॒ഖേഷു॑രു॒ദ്രാമ॒രുതോ॒രഥേ᳚ഷു |<p>വനാ᳚ചിദുഗ്രാജിഹതേ॒നിവോ᳚ഭി॒യാപൃ॑ഥി॒വീചി॑ദ്രേജതേ॒പർവ॑തശ്ചിത് || 2 || </td>
+<td class='VargaStyle1'>ആയേത॒സ്ഥുഃപൃഷ॑തീഷുശ്രു॒താസു॑സു॒ഖേഷു॑രു॒ദ്രാമ॒രുതോ॒രഥേ᳚ഷു |<p>വനാ᳚ചിദുഗ്രാജിഹതേ॒നിവോ᳚ഭി॒യാപൃ॑ഥി॒വീചി॑ദ്‌രേജതേ॒പർവ॑തശ്ചിത് || 2 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>പർവ॑തശ്ചി॒ന്മഹി॑വൃ॒ദ്ധോബി॑ഭായദി॒വശ്ചി॒ത്‌സാനു॑രേജതസ്വ॒നേവഃ॑ |<p>യത്‌ക്രീള॑ഥമരുതഋഷ്ടി॒മന്ത॒ആപ॑ഇവസ॒ധ്ര്യ᳚ഞ്ചോധവധ്വേ || 3 || </td>
@@ -1850,7 +1850,7 @@
 <td class='VargaStyle1'>അ॒ജ്യേ॒ഷ്ഠാസോ॒,അക॑നിഷ്ഠാസഏ॒തേസംഭ്രാത॑രോവാവൃധുഃ॒സൗഭ॑ഗായ |<p>യുവാ᳚പി॒താസ്വപാ᳚രു॒ദ്രഏ᳚ഷാംസു॒ദുഘാ॒പൃശ്നിഃ॑സു॒ദിനാ᳚മ॒രുദ്ഭ്യഃ॑ || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>യദു॑ത്ത॒മേമ॑രുതോമധ്യ॒മേവാ॒യദ്‌വാ᳚വ॒മേസു॑ഭഗാസോദി॒വിഷ്ഠ |<p>അതോ᳚നോരുദ്രാ,ഉ॒തവാ॒ന്വ1॑(അ॒)സ്യാഽഗ്നേ᳚വി॒ത്താദ്ധ॒വിഷോ॒യദ്യജാ᳚മ || 6 || </td>
+<td class='VargaStyle1'>യദു॑ത്ത॒മേമ॑രുതോമധ്യ॒മേവാ॒യദ്‌വാ᳚വ॒മേസു॑ഭഗാസോദി॒വിഷ്ഠ |<p>അതോ᳚നോരുദ്രാ,ഉ॒തവാ॒ന്വ1॑(അ॒)സ്യാഽഗ്നേ᳚വി॒ത്താദ്ധ॒വിഷോ॒യദ്‌യജാ᳚മ || 6 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>അ॒ഗ്നിശ്ച॒യന്മ॑രുതോവിശ്വവേദസോദി॒വോവഹ॑ധ്വ॒ഉത്ത॑രാ॒ദധി॒ഷ്ണുഭിഃ॑ |<p>തേമ᳚ന്ദസാ॒നാധുന॑യോരിശാദസോവാ॒മംധ॑ത്ത॒യജ॑മാനായസുന്വ॒തേ || 7 || </td>
@@ -2033,7 +2033,7 @@
 <td class='VargaStyle2'>താഹിക്ഷ॒ത്രമവി॑ഹ്രുതംസ॒മ്യഗ॑സു॒ര്യ1॑(അ॒)മാശാ᳚തേ | അധ᳚വ്ര॒തേവ॒മാനു॑ഷം॒സ്വ1॑(അ॒)ര്ണധാ᳚യിദർശ॒തം || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>താവാ॒മേഷേ॒രഥാ᳚നാമു॒ർവീംഗവ്യൂ᳚തിമേഷാം | രാ॒തഹ᳚വ്യസ്യസുഷ്ടു॒തിംദ॒ധൃക്സ്തോമൈ᳚ർമനാമഹേ || 3 || </td>
+<td class='VargaStyle2'>താവാ॒മേഷേ॒രഥാ᳚നാമു॒ർവീംഗവ്യൂ᳚തിമേഷാം | രാ॒തഹ᳚വ്യസ്യസുഷ്ടു॒തിംദ॒ധൃക്‌സ്തോമൈ᳚ർമനാമഹേ || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>അധാ॒ഹികാവ്യാ᳚യു॒വംദക്ഷ॑സ്യപൂ॒ർഭിര॑ദ്ഭുതാ | നികേ॒തുനാ॒ജനാ᳚നാംചി॒കേഥേ᳚പൂതദക്ഷസാ || 4 || </td>
