--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 06-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1497,7 +1497,7 @@
 <td class='VargaStyle1'>ஈளே᳚, அ॒க்³னிம்ʼ ஸ்வவ॑ஸம்॒ʼ நமோ᳚பி⁴ரி॒ஹ ப்ர॑ஸ॒த்தோ வி ச॑யத்‌ க்ரு॒ʼதம்ʼ ந॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>ரதை²᳚ரிவ॒ ப்ர ப⁴॑ரே வாஜ॒யத்³பி⁴॑꞉ ப்ரத³க்ஷி॒ணின்ம॒ருதாம்॒ʼ ஸ்தோம॑ம்ருʼத்⁴யாம் ||<span class='MantraNumbering'>{1/8}{4.3.25.1}{5.60.1}{5.5.4.1}{414, 4169}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆ யே த॒ஸ்து²꞉ ப்ருʼஷ॑தீஷு ஶ்ரு॒தாஸு॑ ஸு॒கே²ஷு॑ ரு॒த்³ரா ம॒ருதோ॒ ரதே²᳚ஷு |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>வனா᳚ சிது³க்³ரா ஜிஹதே॒ நி வோ᳚ பி⁴॒யா ப்ரு॑ʼதி²॒வீ சி॑த்³ரேஜதே॒ பர்வ॑தஶ்சித் ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
+<td class='VargaStyle1'>ஆ யே த॒ஸ்து²꞉ ப்ருʼஷ॑தீஷு ஶ்ரு॒தாஸு॑ ஸு॒கே²ஷு॑ ரு॒த்³ரா ம॒ருதோ॒ ரதே²᳚ஷு |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>வனா᳚ சிது³க்³ரா ஜிஹதே॒ நி வோ᳚ பி⁴॒யா ப்ரு॑ʼதி²॒வீ சி॑த்³‌ ரேஜதே॒ பர்வ॑தஶ்சித் ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>பர்வ॑தஶ்சி॒ன்மஹி॑ வ்ரு॒ʼத்³தோ⁴ பி³॑பா⁴ய தி³॒வஶ்சி॒த்‌ ஸானு॑ ரேஜத ஸ்வ॒னே வ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யத்‌ க்ரீள॑த² மருத ருʼஷ்டி॒மந்த॒ ஆப॑ இவ ஸ॒த்⁴ர்ய᳚ஞ்சோ த⁴வத்⁴வே ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
@@ -1509,7 +1509,7 @@
 <td class='VargaStyle1'>அ॒ஜ்யே॒ஷ்டா²ஸோ॒, அக॑நிஷ்டா²ஸ ஏ॒தே ஸம்ʼ ப்⁴ராத॑ரோ வாவ்ருʼது⁴॒꞉ ஸௌப⁴॑கா³ய |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யுவா᳚ பி॒தா ஸ்வபா᳚ ரு॒த்³ர ஏ᳚ஷாம்ʼ ஸு॒து³கா⁴॒ ப்ருʼஶ்னி॑꞉ ஸு॒தி³னா᳚ ம॒ருத்³ப்⁴ய॑꞉ ||<span class='MantraNumbering'>{5/8}{4.3.25.5}{5.60.5}{5.5.4.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>யது³॑த்த॒மே ம॑ருதோ மத்⁴ய॒மே வா॒ யத்³‌ வா᳚வ॒மே ஸு॑ப⁴கா³ஸோ தி³॒வி ஷ்ட² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>அதோ᳚ நோ ருத்³ரா, உ॒த வா॒ ந்வ1॑(அ॒)ஸ்யா(அ)க்³னே᳚ வி॒த்தாத்³த⁴॒விஷோ॒ யத்³யஜா᳚ம ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>யது³॑த்த॒மே ம॑ருதோ மத்⁴ய॒மே வா॒ யத்³‌ வா᳚வ॒மே ஸு॑ப⁴கா³ஸோ தி³॒வி ஷ்ட² |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>அதோ᳚ நோ ருத்³ரா, உ॒த வா॒ ந்வ1॑(அ॒)ஸ்யா(அ)க்³னே᳚ வி॒த்தாத்³த⁴॒விஷோ॒ யத்³‌ யஜா᳚ம ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>அ॒க்³நிஶ்ச॒ யன்ம॑ருதோ விஶ்வவேத³ஸோ தி³॒வோ வஹ॑த்⁴வ॒ உத்த॑ரா॒த³தி⁴॒ ஷ்ணுபி⁴॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>தே ம᳚ந்த³ஸா॒னா து⁴ன॑யோ ரிஶாத³ஸோ வா॒மம்ʼ த⁴॑த்த॒ யஜ॑மானாய ஸுன்வ॒தே ||<span class='MantraNumbering'>{7/8}{4.3.25.7}{5.60.7}{5.5.4.7}{414, 4175}</span></td>
@@ -1686,7 +1686,7 @@
 <td class='VargaStyle2'>தா ஹி க்ஷ॒த்ரமவி॑ஹ்ருதம்ʼ ஸ॒ம்யக³॑ஸு॒ர்ய1॑(அ॒)மாஶா᳚தே |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>அத⁴᳚ வ்ர॒தேவ॒ மானு॑ஷம்॒ʼ ஸ்வ1॑(அ॒)ர்ண தா⁴᳚யி த³ர்ஶ॒தம் ||<span class='MantraNumbering'>{2/6}{4.4.4.2}{5.66.2}{5.5.10.2}{420, 4226}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தா வா॒மேஷே॒ ரதா²᳚நாமு॒ர்வீம்ʼ க³வ்யூ᳚திமேஷாம் |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>ரா॒தஹ᳚வ்யஸ்ய ஸுஷ்டு॒திம்ʼ த³॒த்⁴ருʼக்ஸ்தோமை᳚ர்மநாமஹே ||<span class='MantraNumbering'>{3/6}{4.4.4.3}{5.66.3}{5.5.10.3}{420, 4227}</span></td>
+<td class='VargaStyle2'>தா வா॒மேஷே॒ ரதா²᳚நாமு॒ர்வீம்ʼ க³வ்யூ᳚திமேஷாம் |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>ரா॒தஹ᳚வ்யஸ்ய ஸுஷ்டு॒திம்ʼ த³॒த்⁴ருʼக்‌ ஸ்தோமை᳚ர்மநாமஹே ||<span class='MantraNumbering'>{3/6}{4.4.4.3}{5.66.3}{5.5.10.3}{420, 4227}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>அதா⁴॒ ஹி காவ்யா᳚ யு॒வம்ʼ த³க்ஷ॑ஸ்ய பூ॒ர்பி⁴ர॑த்³பு⁴தா |<span class='RishiDevChandas'>{ஆத்ரேயோ ராதஹவ்ய꞉ | மித்ராவருணௌ | அனுஷ்டுப்}</span><p>நி கே॒துனா॒ ஜனா᳚நாம்ʼ சி॒கேதே²᳚ பூதத³க்ஷஸா ||<span class='MantraNumbering'>{4/6}{4.4.4.4}{5.66.4}{5.5.10.4}{420, 4228}</span></td>
