--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format1/RVS-Telugu-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format1/RVS-Telugu-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 06-Jan-2025]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 08-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1497,7 +1497,7 @@
 <td class='VargaStyle1'>ఈళే᳚, అ॒గ్నిం స్వవ॑సం॒ నమో᳚భిరి॒హ ప్ర॑స॒త్తో వి చ॑యత్‌ కృ॒తం నః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>రథై᳚రివ॒ ప్ర భ॑రే వాజ॒యద్భిః॑ ప్రదక్షి॒ణిన్మ॒రుతాం॒ స్తోమ॑మృధ్యాం ||<span class='MantraNumbering'>{1/8}{4.3.25.1}{5.60.1}{5.5.4.1}{414, 4169}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆ యే త॒స్థుః పృష॑తీషు శ్రు॒తాసు॑ సు॒ఖేషు॑ రు॒ద్రా మ॒రుతో॒ రథే᳚షు |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>వనా᳚ చిదుగ్రా జిహతే॒ ని వో᳚ భి॒యా పృ॑థి॒వీ చి॑ద్రేజతే॒ పర్వ॑తశ్చిత్ ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
+<td class='VargaStyle1'>ఆ యే త॒స్థుః పృష॑తీషు శ్రు॒తాసు॑ సు॒ఖేషు॑ రు॒ద్రా మ॒రుతో॒ రథే᳚షు |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>వనా᳚ చిదుగ్రా జిహతే॒ ని వో᳚ భి॒యా పృ॑థి॒వీ చి॑ద్‌ రేజతే॒ పర్వ॑తశ్చిత్ ||<span class='MantraNumbering'>{2/8}{4.3.25.2}{5.60.2}{5.5.4.2}{414, 4170}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>పర్వ॑తశ్చి॒న్మహి॑ వృ॒ద్ధో బి॑భాయ ది॒వశ్చి॒త్‌ సాను॑ రేజత స్వ॒నే వః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>యత్‌ క్రీళ॑థ మరుత ఋష్టి॒మంత॒ ఆప॑ ఇవ స॒ధ్ర్యం᳚చో ధవధ్వే ||<span class='MantraNumbering'>{3/8}{4.3.25.3}{5.60.3}{5.5.4.3}{414, 4171}</span></td>
@@ -1509,7 +1509,7 @@
 <td class='VargaStyle1'>అ॒జ్యే॒ష్ఠాసో॒, అక॑నిష్ఠాస ఏ॒తే సం భ్రాత॑రో వావృధుః॒ సౌభ॑గాయ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>యువా᳚ పి॒తా స్వపా᳚ రు॒ద్ర ఏ᳚షాం సు॒దుఘా॒ పృశ్నిః॑ సు॒దినా᳚ మ॒రుద్భ్యః॑ ||<span class='MantraNumbering'>{5/8}{4.3.25.5}{5.60.5}{5.5.4.5}{414, 4173}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>యదు॑త్త॒మే మ॑రుతో మధ్య॒మే వా॒ యద్‌ వా᳚వ॒మే సు॑భగాసో ది॒వి ష్ఠ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>అతో᳚ నో రుద్రా, ఉ॒త వా॒ న్వ1॑(అ॒)స్యాఽగ్నే᳚ వి॒త్తాద్ధ॒విషో॒ యద్యజా᳚మ ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
+<td class='VargaStyle1'>యదు॑త్త॒మే మ॑రుతో మధ్య॒మే వా॒ యద్‌ వా᳚వ॒మే సు॑భగాసో ది॒వి ష్ఠ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>అతో᳚ నో రుద్రా, ఉ॒త వా॒ న్వ1॑(అ॒)స్యాఽగ్నే᳚ వి॒త్తాద్ధ॒విషో॒ యద్‌ యజా᳚మ ||<span class='MantraNumbering'>{6/8}{4.3.25.6}{5.60.6}{5.5.4.6}{414, 4174}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>అ॒గ్నిశ్చ॒ యన్మ॑రుతో విశ్వవేదసో ది॒వో వహ॑ధ్వ॒ ఉత్త॑రా॒దధి॒ ష్ణుభిః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>తే మం᳚దసా॒నా ధున॑యో రిశాదసో వా॒మం ధ॑త్త॒ యజ॑మానాయ సున్వ॒తే ||<span class='MantraNumbering'>{7/8}{4.3.25.7}{5.60.7}{5.5.4.7}{414, 4175}</span></td>
@@ -1686,7 +1686,7 @@
 <td class='VargaStyle2'>తా హి క్ష॒త్రమవి॑హ్రుతం స॒మ్యగ॑సు॒ర్య1॑(అ॒)మాశా᳚తే |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>అధ᳚ వ్ర॒తేవ॒ మాను॑షం॒ స్వ1॑(అ॒)ర్ణ ధా᳚యి దర్శ॒తం ||<span class='MantraNumbering'>{2/6}{4.4.4.2}{5.66.2}{5.5.10.2}{420, 4226}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తా వా॒మేషే॒ రథా᳚నాము॒ర్వీం గవ్యూ᳚తిమేషాం |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>రా॒తహ᳚వ్యస్య సుష్టు॒తిం ద॒ధృక్స్తోమై᳚ర్మనామహే ||<span class='MantraNumbering'>{3/6}{4.4.4.3}{5.66.3}{5.5.10.3}{420, 4227}</span></td>
+<td class='VargaStyle2'>తా వా॒మేషే॒ రథా᳚నాము॒ర్వీం గవ్యూ᳚తిమేషాం |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>రా॒తహ᳚వ్యస్య సుష్టు॒తిం ద॒ధృక్‌ స్తోమై᳚ర్మనామహే ||<span class='MantraNumbering'>{3/6}{4.4.4.3}{5.66.3}{5.5.10.3}{420, 4227}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>అధా॒ హి కావ్యా᳚ యు॒వం దక్ష॑స్య పూ॒ర్భిర॑ద్భుతా |<span class='RishiDevChandas'>{ఆత్రేయో రాతహవ్యః | మిత్రావరుణౌ | అనుష్టుప్}</span><p>ని కే॒తునా॒ జనా᳚నాం చి॒కేథే᳚ పూతదక్షసా ||<span class='MantraNumbering'>{4/6}{4.4.4.4}{5.66.4}{5.5.10.4}{420, 4228}</span></td>
